# text_normalizer

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: general.yml
py_normalizer/: pyproject.toml
py_normalizer/src/py_normalizer/: main.py  normalizer.py  regex_constants.py  transforms.py
src/: lib.rs  main.rs  normalizer.rs  regex_constants.rs  transforms.rs
text_normalizer/: main.py  py_normalize.py  regex_constants.py  transforms.py
