[package]
name = "text_normalizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "text_normalizer"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
pyo3 = "0.19.0"
rayon = "1.8.1"
regex = "1.10.3"
unidecode = "0.3.0"
