[tool.poetry]
name = "text_normalizer"
version = "0.1.0"
description = "A text normalizer built in Rust and Python"
authors = ["Carlos Avellaneda <carlos.avellaneda8@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
unidecode = "^1.3.8"

[tool.poetry.dev-dependencies]
maturin = "^1"
pytest = "^7.1.2"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "text_normalizer"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
